--- a/Redmine.ManagerWPF/Views/ContentDialogs/SynchronizeProjects.xaml
+++ b/Redmine.ManagerWPF/Views/ContentDialogs/SynchronizeProjects.xaml
@@ -1,16 +1,17 @@
-﻿<ui:ContentDialog x:Class="Redmine.ManagerWPF.Desktop.Views.ContentDialogs.SynchronizeProjects"
-                  x:Name="SynchronizeProjectsDialog"
-                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:ui="http://schemas.modernwpf.com/2019"
-                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                  xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-                   xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
-                  mc:Ignorable="d"
-                  Title="Synchronizacja projektów"
-             d:DesignHeight="200" d:DesignWidth="400"
-                 >
+﻿<ui:ContentDialog
+    x:Class="Redmine.ManagerWPF.Desktop.Views.ContentDialogs.SynchronizeProjects"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.modernwpf.com/2019"
+    xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    x:Name="SynchronizeProjectsDialog"
+    Title="Synchronizacja projektów"
+    d:DesignHeight="200"
+    d:DesignWidth="400"
+    mc:Ignorable="d">
     <ui:ContentDialog.DataContext>
         <vm:SynchronizeProjectsViewModel />
     </ui:ContentDialog.DataContext>
@@ -26,24 +27,40 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:ProgressBar
-                    IsIndeterminate="False"
-                    VerticalAlignment="Center"
-                    Value="{Binding ProgressBarValue, Mode=TwoWay}"
-                    Margin="0,0,0,10" />
+            Margin="0,0,0,10"
+            VerticalAlignment="Center"
+            IsIndeterminate="False"
+            Value="{Binding ProgressBarValue, Mode=TwoWay}" />
         <StackPanel Grid.Row="1" Orientation="Horizontal">
             <TextBlock Text="Zsynchronizowano:" />
             <TextBlock Margin="5,0,5,0" Text="{Binding Value}" />
             <TextBlock Text="/" />
             <TextBlock Margin="5,0,0,0" Text="{Binding TotalProjectsCount}" />
         </StackPanel>
-        <TextBlock Margin="0,10,0,0" Foreground="Green" Visibility="{Binding ShowOk, Converter={StaticResource BooleanToVisibilityConverter}}"  Grid.Row="2" Text="Synchronizacja zakończona powodzeniem." />
+        <TextBlock
+            Grid.Row="2"
+            Margin="0,10,0,0"
+            Foreground="Green"
+            Text="Synchronizacja zakończona powodzeniem."
+            Visibility="{Binding ShowOk, Converter={StaticResource BooleanToVisibilityConverter}}" />
         <Grid Grid.Row="3" Margin="0,15,0,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Content="{Binding PrimaryButtonText}" Command="{Binding SynchronizeProjectsCommand}"/>
-            <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Column="1" Content="{Binding CancelButtonText}" Command="{Binding CancelCommand}" CommandParameter="{Binding ElementName=SynchronizeProjectsDialog}"/>
+            <Button
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Command="{Binding SynchronizeProjectsCommand}"
+                Content="{Binding PrimaryButtonText}" />
+            <Button
+                Grid.Column="1"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Command="{Binding CancelCommand}"
+                CommandParameter="{Binding ElementName=SynchronizeProjectsDialog}"
+                Content="{Binding CancelButtonText}" />
         </Grid>
     </Grid>
 </ui:ContentDialog>
