--- a/Redmine.ManagerWPF/Views/ContentDialogs/CreateDatabaseBackup.xaml
+++ b/Redmine.ManagerWPF/Views/ContentDialogs/CreateDatabaseBackup.xaml
@@ -1,6 +1,5 @@
 ﻿<ui:ContentDialog
     x:Class="Redmine.ManagerWPF.Desktop.Views.ContentDialogs.CreateDatabaseBackup"
-    x:Name="CreateDatabaseBackupDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:conv="clr-namespace:Redmine.ManagerWPF.Desktop.Converters"
@@ -9,6 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
     xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    x:Name="CreateDatabaseBackupDialog"
     Title="Utwórz kopię bazy danych"
     d:DesignHeight="550"
     d:DesignWidth="800"
@@ -16,9 +16,9 @@
     <ui:ContentDialog.DataContext>
         <vm:CreateDatabaseBackupViewModel />
     </ui:ContentDialog.DataContext>
-    <Grid MaxHeight="400" Width="400">
+    <Grid Width="400" MaxHeight="400">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -27,19 +27,54 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid Grid.ColumnSpan="2" Grid.Row="0" Margin="0,10,0,0">
+        <Grid
+            Grid.Row="0"
+            Grid.ColumnSpan="2"
+            Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBlock VerticalAlignment="Center" Text="Ścieżka:"/>
-            <TextBlock  VerticalAlignment="Center" Grid.Column="1" Margin="10,0,0,0" TextWrapping="Wrap" Text="{Binding FolderPath}"/>
-            <Button Grid.Column="2" Content="Wybierz" Command="{Binding OpenFolderPickerDialogCommand}"/>
+            <TextBlock VerticalAlignment="Center" Text="Ścieżka:" />
+            <TextBlock
+                Grid.Column="1"
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                Text="{Binding FolderPath}"
+                TextWrapping="Wrap" />
+            <Button
+                Grid.Column="2"
+                Command="{Binding OpenFolderPickerDialogCommand}"
+                Content="Wybierz" />
         </Grid>
-        <TextBlock Text="Folder z nadanymiu uprawnieniami do zapisu plików przez bazę (najlepiej folder z backupami bazy MSSQL)" Grid.ColumnSpan="2" Margin="0,10,0,10" TextWrapping="Wrap" Grid.Row="1" />
-        <TextBlock Margin="0,10,0,10" Grid.Row="2" Grid.ColumnSpan="2" Text="{Binding Information}" TextWrapping="Wrap" Foreground="Green"/>
-        <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="3" Content="Wykonaj kopię" Command="{Binding CreateBackupCommand}"/>
-        <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="3" Content="Zamknij" Command="{Binding CloseWindowCommand}" CommandParameter="{Binding ElementName=CreateDatabaseBackupDialog}"/>
+        <TextBlock
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Margin="0,10,0,10"
+            Text="Folder z nadanymiu uprawnieniami do zapisu plików przez bazę (najlepiej folder z backupami bazy MSSQL)"
+            TextWrapping="Wrap" />
+        <TextBlock
+            Grid.Row="2"
+            Grid.ColumnSpan="2"
+            Margin="0,10,0,10"
+            Foreground="Green"
+            Text="{Binding Information}"
+            TextWrapping="Wrap" />
+        <Button
+            Grid.Row="3"
+            Grid.Column="0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            Command="{Binding CreateBackupCommand}"
+            Content="Wykonaj kopię" />
+        <Button
+            Grid.Row="3"
+            Grid.Column="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            Command="{Binding CloseWindowCommand}"
+            CommandParameter="{Binding ElementName=CreateDatabaseBackupDialog}"
+            Content="Zamknij" />
     </Grid>
 </ui:ContentDialog>
