--- a/Redmine.ManagerWPF/Views/ContentDialogs/DailyRaport.xaml
+++ b/Redmine.ManagerWPF/Views/ContentDialogs/DailyRaport.xaml
@@ -4,11 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:conv="clr-namespace:Redmine.ManagerWPF.Desktop.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dailyRaports="clr-namespace:Redmine.ManagerWPF.Desktop.Models.DailyRaport"
     xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.ContentDialogs"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
     xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-    xmlns:dailyRaports="clr-namespace:Redmine.ManagerWPF.Desktop.Models.DailyRaport"
     Title="Raport dzienny"
     Width="Auto"
     PrimaryButtonText="Ok"
@@ -29,63 +29,133 @@
 
     <Grid Width="480" MaxHeight="600">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <DatePicker DisplayDate="{Binding Date}" Grid.Row="0" Margin="0,0,0,10" SelectedDate="{Binding Date, Mode=TwoWay}" />
-        <ProgressBar Grid.Row="1" IsIndeterminate="True" Visibility="{Binding DataLoading, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <DatePicker
+            Grid.Row="0"
+            Margin="0,0,0,10"
+            DisplayDate="{Binding Date}"
+            SelectedDate="{Binding Date, Mode=TwoWay}" />
+        <ProgressBar
+            Grid.Row="1"
+            IsIndeterminate="True"
+            Visibility="{Binding DataLoading, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
         <TreeView
             Grid.Row="1"
-            FontSize="12"
+            VerticalAlignment="Stretch"
             BorderBrush="Black"
             BorderThickness="1"
-            VerticalAlignment="Stretch"
-            Visibility="{Binding DataLoading, Converter={StaticResource InvertBooleanToVisibilityConverter}}"
-            ItemsSource="{Binding RaportData}">
+            FontSize="12"
+            ItemsSource="{Binding RaportData}"
+            Visibility="{Binding DataLoading, Converter={StaticResource InvertBooleanToVisibilityConverter}}">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate DataType="{x:Type dailyRaports:ProjectListItemModel}" ItemsSource="{Binding Childrens}">
                     <Grid>
                         <Grid HorizontalAlignment="Stretch" Visibility="{Binding Type, Converter={StaticResource IsEverythingElseThanTimeIntervalConverter}}">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock FontSize="13" FontWeight="Bold" Grid.Column="0" Text="{Binding Name}" />
+                            <TextBlock
+                                Grid.Column="0"
+                                FontSize="13"
+                                FontWeight="Bold"
+                                Text="{Binding Name}" />
                             <StackPanel Grid.Column="1" Orientation="Horizontal">
-                                <TextBlock FontSize="12" Margin="50,0,0,0" Text="Czas całkowity:"/>
-                                <TextBlock FontSize="12"  Margin="5,0,0,0" Text="{Binding TotalTime}" />
+                                <TextBlock
+                                    Margin="50,0,0,0"
+                                    FontSize="12"
+                                    Text="Czas całkowity:" />
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    FontSize="12"
+                                    Text="{Binding TotalTime}" />
                             </StackPanel>
                         </Grid>
-                        <Grid Visibility="{Binding Type, Converter={StaticResource IsTimeIntervalTypeConverter}}" Margin="0,0,0,10">
+                        <Grid Margin="0,0,0,10" Visibility="{Binding Type, Converter={StaticResource IsTimeIntervalTypeConverter}}">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
-                            <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
-                                <TextBlock FontSize="13" FontWeight="SemiBold"  Text="Start:"/>
-                                <TextBlock FontSize="12" Margin="5,0,0,0" Text="{Binding Path=StartDate, StringFormat=dd.MM.yyyy HH:mm:ss}" />
+                            <StackPanel
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                Orientation="Horizontal">
+                                <TextBlock
+                                    FontSize="13"
+                                    FontWeight="SemiBold"
+                                    Text="Start:" />
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    FontSize="12"
+                                    Text="{Binding Path=StartDate, StringFormat=dd.MM.yyyy HH:mm:ss}" />
                             </StackPanel>
-                            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
-                                <TextBlock FontSize="12" FontWeight="SemiBold" Margin="10,0,0,0" Text="Stop:"/>
-                                <TextBlock FontSize="12" Margin="5,0,0,0" Text="{Binding Path=EndDate, StringFormat=dd.MM.yyyy HH:mm:ss}" />
+                            <StackPanel
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                Orientation="Horizontal">
+                                <TextBlock
+                                    Margin="10,0,0,0"
+                                    FontSize="12"
+                                    FontWeight="SemiBold"
+                                    Text="Stop:" />
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    FontSize="12"
+                                    Text="{Binding Path=EndDate, StringFormat=dd.MM.yyyy HH:mm:ss}" />
                             </StackPanel>
-                            <StackPanel Margin="0,10,0,0" Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
-                                <TextBlock FontSize="13" FontWeight="SemiBold"  Text="Czas całkowity:"/>
-                                <TextBlock FontSize="12" Margin="5,0,0,0" Text="{Binding Time}" />
+                            <StackPanel
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Margin="0,10,0,0"
+                                Orientation="Horizontal">
+                                <TextBlock
+                                    FontSize="13"
+                                    FontWeight="SemiBold"
+                                    Text="Czas całkowity:" />
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    FontSize="12"
+                                    Text="{Binding Time}" />
                             </StackPanel>
-                            <StackPanel  Margin="0,10,0,0" Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Visibility="{Binding ToComment, Converter={StaticResource StringToVIsibilityConverter}}">
-                                <TextBlock FontSize="13" FontWeight="SemiBold" Margin="10,0,0,0" Text="Do komentarza:"/>
-                                <TextBlock FontSize="12" Margin="5,0,0,0" TextWrapping="Wrap" Text="{Binding ToComment}" />
+                            <StackPanel
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                Margin="0,10,0,0"
+                                Orientation="Horizontal"
+                                Visibility="{Binding ToComment, Converter={StaticResource StringToVIsibilityConverter}}">
+                                <TextBlock
+                                    Margin="10,0,0,0"
+                                    FontSize="13"
+                                    FontWeight="SemiBold"
+                                    Text="Do komentarza:" />
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    FontSize="12"
+                                    Text="{Binding ToComment}"
+                                    TextWrapping="Wrap" />
                             </StackPanel>
-                            <StackPanel Margin="0,10,0,0" Grid.Column="0" Grid.Row="2" Orientation="Horizontal" Visibility="{Binding Note, Converter={StaticResource StringToVIsibilityConverter}}">
-                                <TextBlock FontSize="13" FontWeight="SemiBold"  Text="Notatka:"/>
-                                <TextBlock FontSize="12" Margin="5,0,0,0" Text="{Binding Note}" />
+                            <StackPanel
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                Margin="0,10,0,0"
+                                Orientation="Horizontal"
+                                Visibility="{Binding Note, Converter={StaticResource StringToVIsibilityConverter}}">
+                                <TextBlock
+                                    FontSize="13"
+                                    FontWeight="SemiBold"
+                                    Text="Notatka:" />
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    FontSize="12"
+                                    Text="{Binding Note}" />
                             </StackPanel>
 
                         </Grid>
