--- a/Redmine.ManagerWPF/Views/ContentDialogs/EditTimeIntervalTime.xaml
+++ b/Redmine.ManagerWPF/Views/ContentDialogs/EditTimeIntervalTime.xaml
@@ -1,6 +1,5 @@
 ﻿<ui:ContentDialog
     x:Class="Redmine.ManagerWPF.Desktop.Views.ContentDialogs.EditTimeIntervalTime"
-    x:Name="EditTimeIntervalTimeDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:conv="clr-namespace:Redmine.ManagerWPF.Desktop.Converters"
@@ -9,6 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.modernwpf.com/2019"
     xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    x:Name="EditTimeIntervalTimeDialog"
     Title="Edytuj czas"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -23,19 +23,53 @@
     </ui:ContentDialog.Resources>
     <Grid Width="300">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Calendar HorizontalAlignment="Stretch" Grid.Row="0" Grid.ColumnSpan="2" DisplayDate="{Binding DateTimeToEdit}" SelectedDate="{Binding DateTimeToEdit}" />
-        <ui:SimpleTimePicker HorizontalAlignment="Stretch" Grid.ColumnSpan="2"  Grid.Row="1" Margin="0,10,0,0"  Culture="pl-PL" SelectedDateTime="{Binding DateTimeToEdit}" />
-        <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Margin="0,5,0,5" Text="{Binding ErrorText}" Foreground="Red" HorizontalAlignment="Center" Visibility="{Binding IsError, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-        <Button VerticalAlignment="Top"  Grid.Row="4" Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,10,5,0" Content="Zapisz" Command="{Binding SaveTimeIntervalCommand}" CommandParameter="{Binding ElementName=EditTimeIntervalTimeDialog}"/>
-        <Button VerticalAlignment="Top" Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5,10,0,0" Content="Anuluj" Command="{Binding CloseDialogCommand}" CommandParameter="{Binding ElementName=EditTimeIntervalTimeDialog}"/>
+        <Calendar
+            Grid.Row="0"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Stretch"
+            DisplayDate="{Binding DateTimeToEdit}"
+            SelectedDate="{Binding DateTimeToEdit}" />
+        <ui:SimpleTimePicker
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Margin="0,10,0,0"
+            HorizontalAlignment="Stretch"
+            Culture="pl-PL"
+            SelectedDateTime="{Binding DateTimeToEdit}" />
+        <TextBlock
+            Grid.Row="2"
+            Grid.ColumnSpan="2"
+            Margin="0,5,0,5"
+            HorizontalAlignment="Center"
+            Foreground="Red"
+            Text="{Binding ErrorText}"
+            Visibility="{Binding IsError, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <Button
+            Grid.Row="4"
+            Grid.Column="0"
+            Margin="0,10,5,0"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Top"
+            Command="{Binding SaveTimeIntervalCommand}"
+            CommandParameter="{Binding ElementName=EditTimeIntervalTimeDialog}"
+            Content="Zapisz" />
+        <Button
+            Grid.Row="4"
+            Grid.Column="1"
+            Margin="5,10,0,0"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Top"
+            Command="{Binding CloseDialogCommand}"
+            CommandParameter="{Binding ElementName=EditTimeIntervalTimeDialog}"
+            Content="Anuluj" />
     </Grid>
 </ui:ContentDialog>
