--- a/Redmine.ManagerWPF/Views/ContentDialogs/SynchronizeIssues.xaml
+++ b/Redmine.ManagerWPF/Views/ContentDialogs/SynchronizeIssues.xaml
@@ -1,16 +1,17 @@
-﻿<ui:ContentDialog x:Class="Redmine.ManagerWPF.Desktop.Views.ContentDialogs.SynchronizeIssues"
-                  x:Name="SynchronizeIssuesDialog"
-                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:ui="http://schemas.modernwpf.com/2019"
-                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                  xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-                   xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
-                  mc:Ignorable="d"
-                  Title="Synchronizacja zadań i komentarzy"
-             d:DesignHeight="300" d:DesignWidth="500"
-                  >
+﻿<ui:ContentDialog
+    x:Class="Redmine.ManagerWPF.Desktop.Views.ContentDialogs.SynchronizeIssues"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.modernwpf.com/2019"
+    xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    x:Name="SynchronizeIssuesDialog"
+    Title="Synchronizacja zadań i komentarzy"
+    d:DesignHeight="300"
+    d:DesignWidth="500"
+    mc:Ignorable="d">
     <ui:ContentDialog.DataContext>
         <vm:SynchronizeIssuesViewModel />
     </ui:ContentDialog.DataContext>
@@ -28,36 +29,60 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ui:ProgressBar
-                    IsIndeterminate="False"
-                    VerticalAlignment="Center"
-                    Value="{Binding ProgressBarValue, Mode=TwoWay}"
-                    Margin="0,0,0,10" />
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Visibility="{Binding ShowDownloadIssues, Converter={StaticResource BooleanToVisibilityConverter}}">
+            Margin="0,0,0,10"
+            VerticalAlignment="Center"
+            IsIndeterminate="False"
+            Value="{Binding ProgressBarValue, Mode=TwoWay}" />
+        <StackPanel
+            Grid.Row="1"
+            Orientation="Horizontal"
+            Visibility="{Binding ShowDownloadIssues, Converter={StaticResource BooleanToVisibilityConverter}}">
             <TextBlock Text="Pobieranie zadań z Redmine:" />
             <TextBlock Margin="5,0,5,0" Text="{Binding Value}" />
             <TextBlock Text="/" />
             <TextBlock Margin="5,0,0,0" Text="{Binding TotalIssuesCount}" />
         </StackPanel>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" Visibility="{Binding ShowProgressText, Converter={StaticResource BooleanToVisibilityConverter}}">
+        <StackPanel
+            Grid.Row="2"
+            Orientation="Horizontal"
+            Visibility="{Binding ShowProgressText, Converter={StaticResource BooleanToVisibilityConverter}}">
             <TextBlock Text="Zsynchronizowano:" />
             <TextBlock Margin="5,0,5,0" Text="{Binding Value}" />
             <TextBlock Text="/" />
             <TextBlock Margin="5,0,0,0" Text="{Binding TotalIssuesCount}" />
         </StackPanel>
-        <StackPanel Grid.Row="3" Orientation="Horizontal" Visibility="{Binding ShowTreeUpdateText, Converter={StaticResource BooleanToVisibilityConverter}}">
+        <StackPanel
+            Grid.Row="3"
+            Orientation="Horizontal"
+            Visibility="{Binding ShowTreeUpdateText, Converter={StaticResource BooleanToVisibilityConverter}}">
             <TextBlock Text="Budowa struktury drzewa:" />
             <TextBlock Margin="5,0,5,0" Text="{Binding Value}" />
             <TextBlock Text="/" />
             <TextBlock Margin="5,0,0,0" Text="{Binding TotalIssuesCount}" />
         </StackPanel>
-        <TextBlock Margin="0,10,0,0" Foreground="Green" Visibility="{Binding ShowOk, Converter={StaticResource BooleanToVisibilityConverter}}"  Grid.Row="4" Text="Synchronizacja zakończona powodzeniem." />
+        <TextBlock
+            Grid.Row="4"
+            Margin="0,10,0,0"
+            Foreground="Green"
+            Text="Synchronizacja zakończona powodzeniem."
+            Visibility="{Binding ShowOk, Converter={StaticResource BooleanToVisibilityConverter}}" />
         <Grid Grid.Row="5" Margin="0,15,0,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Content="{Binding PrimaryButtonText}" Command="{Binding SynchronizeIssuesCommand}"/>
-            <Button VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.Column="1" Content="{Binding CancelButtonText}" Command="{Binding CancelCommand}" CommandParameter="{Binding ElementName=SynchronizeIssuesDialog}"/>
+            <Button
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Command="{Binding SynchronizeIssuesCommand}"
+                Content="{Binding PrimaryButtonText}" />
+            <Button
+                Grid.Column="1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Command="{Binding CancelCommand}"
+                CommandParameter="{Binding ElementName=SynchronizeIssuesDialog}"
+                Content="{Binding CancelButtonText}" />
         </Grid>
 
     </Grid>
