--- a/Redmine.ManagerWPF/Views/MainWindow.xaml
+++ b/Redmine.ManagerWPF/Views/MainWindow.xaml
@@ -1,34 +1,35 @@
 ﻿<Window
     x:Class="Redmine.ManagerWPF.Views.MainWindow"
-    x:Name="MainWindowWindow"
-    
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.modernwpf.com/2019"
-    xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-    xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
-    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
     xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:tb="http://www.hardcodet.net/taskbar"
+    xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
     xmlns:uc="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
+    xmlns:ui="http://schemas.modernwpf.com/2019"
+    xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    x:Name="MainWindowWindow"
     Title="Redmine Manager"
-    Icon="/logo.ico"
     Width="1000"
-    MinHeight="650"
     MinWidth="800"
-    mc:Ignorable="d"
-    WindowStartupLocation="CenterScreen"
+    MinHeight="650"
     Closing="Window_Closing"
+    Icon="/logo.ico"
     StateChanged="MainWindowWindow_StateChanged"
-    xmlns:tb="http://www.hardcodet.net/taskbar">
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <BitmapImage x:Key="Add" UriSource="/Resources/add.png" />
+        <BitmapImage x:Key="Trash" UriSource="/Resources/bin.png" />
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -45,51 +46,74 @@
         <DockPanel Grid.ColumnSpan="2">
             <Menu DockPanel.Dock="Top">
                 <MenuItem FontSize="12" Header="_Synchronizacja">
-                    <MenuItem FontSize="12" Command="{Binding SynchronizeProjectsCommand}" Header="_Synchronizuj projekty" />
-                    <MenuItem FontSize="12" Command="{Binding SynchronizeIssuesCommand}" Header="_Synchronizuj zadania" />
+                    <MenuItem
+                        Command="{Binding SynchronizeProjectsCommand}"
+                        FontSize="12"
+                        Header="_Synchronizuj projekty" />
+                    <MenuItem
+                        Command="{Binding SynchronizeIssuesCommand}"
+                        FontSize="12"
+                        Header="_Synchronizuj zadania" />
                 </MenuItem>
                 <MenuItem FontSize="12" Header="_Opcje">
-                    <MenuItem FontSize="12" Command="{Binding OpenSettingsDialogCommand}" Header="_Ustawienia" />
+                    <MenuItem
+                        Command="{Binding OpenSettingsDialogCommand}"
+                        FontSize="12"
+                        Header="_Ustawienia" />
                     <MenuItem FontSize="12" Header="_Baza danych">
-                        <MenuItem FontSize="12" Command="{Binding OpenCreateBackupDialogCommand}" Header="_Utwórz kopię" />
-                        <MenuItem FontSize="12" Command="{Binding OpenRestoreBackupDialogCommand}" Header="_Przywróć kopię" />
+                        <MenuItem
+                            Command="{Binding OpenCreateBackupDialogCommand}"
+                            FontSize="12"
+                            Header="_Utwórz kopię" />
+                        <MenuItem
+                            Command="{Binding OpenRestoreBackupDialogCommand}"
+                            FontSize="12"
+                            Header="_Przywróć kopię" />
                     </MenuItem>
                 </MenuItem>
                 <MenuItem FontSize="12" Header="_Raporty">
-                    <MenuItem FontSize="12" Command="{Binding OpenDailyRaportDialogCommand}" Header="_Dzienny raport" />
+                    <MenuItem
+                        Command="{Binding OpenDailyRaportDialogCommand}"
+                        FontSize="12"
+                        Header="_Dzienny raport" />
                 </MenuItem>
                 <MenuItem FontSize="12" Header="_Wyszukiwanie">
-                    <MenuItem FontSize="12" Command="{Binding OpenSearchWindowCommand}" Header="_W zadaniach i komentarzach" />
+                    <MenuItem
+                        Command="{Binding OpenSearchWindowCommand}"
+                        FontSize="12"
+                        Header="_W zadaniach i komentarzach" />
                 </MenuItem>
             </Menu>
         </DockPanel>
         <tb:TaskbarIcon
             x:Name="TaskBarIcon"
-            ToolTipText="Redmine Manager"
-            LeftClickCommand="{Binding ShowMainWindowCommand}" 
-            LeftClickCommandParameter="{Binding ElementName=MainWindowWindow}" IconSource="/logo.ico"
-            >
-        </tb:TaskbarIcon>
-        <Grid
-            Grid.Row="1"
-            Grid.Column="0">
+            IconSource="/logo.ico"
+            LeftClickCommand="{Binding ShowMainWindowCommand}"
+            LeftClickCommandParameter="{Binding ElementName=MainWindowWindow}"
+            ToolTipText="Redmine Manager" />
+        <Grid Grid.Row="1" Grid.Column="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" VerticalAlignment="Center" FontSize="24" Margin="10,0,0,10" Text="Projekt:" />
+            <TextBlock
+                Grid.Column="0"
+                Margin="10,0,0,10"
+                VerticalAlignment="Center"
+                FontSize="24"
+                Text="Projekt:" />
             <ComboBox
                 x:Name="projectComboBox"
-                HorizontalAlignment="Stretch"
-                Margin="5,0,10,0"
-                MinWidth="200"
                 Grid.Column="1"
                 Height="70"
+                MinWidth="200"
                 MinHeight="70"
+                Margin="5,0,10,0"
                 Padding="10,0,0,0"
+                HorizontalAlignment="Stretch"
                 VerticalAlignment="Center"
-                SelectedItem="{Binding SelectedProject, Mode=TwoWay}"
-                ItemsSource="{Binding Projects}">
+                ItemsSource="{Binding Projects}"
+                SelectedItem="{Binding SelectedProject, Mode=TwoWay}">
                 <Behaviors:Interaction.Triggers>
                     <Behaviors:EventTrigger EventName="SelectionChanged" SourceObject="{Binding ElementName=projectComboBox}">
                         <Behaviors:InvokeCommandAction Command="{Binding LoadIssuesForProjectAsyncCommand}" />
@@ -103,15 +127,21 @@
                 </Behaviors:Interaction.Triggers>
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel VerticalAlignment="Stretch"  Margin="0,0,0,0">
+                        <StackPanel Margin="0,0,0,0" VerticalAlignment="Stretch">
                             <TextBlock
                                 Margin="0,0,0,0"
                                 FontSize="14"
                                 FontWeight="Bold"
                                 Text="{Binding Name}" />
-                            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal"  Margin="0,0,0,0">
+                            <StackPanel
+                                Margin="0,0,0,0"
+                                HorizontalAlignment="Right"
+                                Orientation="Horizontal">
                                 <TextBlock FontSize="11" Text="Data rozpoczęcia:" />
-                                <TextBlock FontSize="11" Margin="10,0,0,0" Text="{Binding DataStart}" />
+                                <TextBlock
+                                    Margin="10,0,0,0"
+                                    FontSize="11"
+                                    Text="{Binding DataStart}" />
                             </StackPanel>
                         </StackPanel>
                     </DataTemplate>
@@ -119,14 +149,14 @@
             </ComboBox>
         </Grid>
         <TreeView
-            BorderBrush="Black"
-            BorderThickness="1"
             Grid.Row="2"
             Grid.RowSpan="2"
             Grid.Column="0"
             MinHeight="400"
             Margin="10"
             VerticalAlignment="Stretch"
+            BorderBrush="Black"
+            BorderThickness="1"
             ItemsSource="{Binding Issues}">
             <i:Interaction.Behaviors>
                 <customBehaviors:MainWindowTreeViewBehavior />
@@ -139,21 +169,40 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" Text="{Binding Name}" />
-                        <TextBlock Margin="20,0,0,0" FontWeight="Bold" Foreground="Green" Grid.Column="1" Text="Wykonane" Visibility="{Binding Done, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="20,0,0,0"
+                            FontWeight="Bold"
+                            Foreground="Green"
+                            Text="Wykonane"
+                            Visibility="{Binding Done, Converter={StaticResource BooleanToVisibilityConverter}}" />
                     </Grid>
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
-        <Grid Grid.Row="1" Grid.Column="1" Visibility="{Binding ViewProjectDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
-            <uc:ProjectShortInfo VerticalAlignment="Center" Margin="0,10,0,10" />
+        <Grid
+            Grid.Row="1"
+            Grid.Column="1"
+            Visibility="{Binding ViewProjectDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <uc:ProjectShortInfo Margin="0,10,0,10" VerticalAlignment="Center" />
         </Grid>
-        <Grid Grid.Row="2" Grid.Column="1" Visibility="{Binding ViewIssueDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
+        <Grid
+            Grid.Row="2"
+            Grid.Column="1"
+            Visibility="{Binding ViewIssueDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
             <uc:IssueForm Margin="0,10,0,10" />
         </Grid>
-        <Grid Grid.Row="2" Grid.Column="1" Visibility="{Binding ViewCommentDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
+        <Grid
+            Grid.Row="2"
+            Grid.Column="1"
+            Visibility="{Binding ViewCommentDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
             <uc:CommentForm Margin="0,10,0,10" />
         </Grid>
-        <Grid Grid.Row="3" Grid.RowSpan="2" Grid.Column="1" Visibility="{Binding ViewTimeIntervalList, Converter={StaticResource BooleanToVisibilityConverter}}">
+        <Grid
+            Grid.Row="3"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Visibility="{Binding ViewTimeIntervalList, Converter={StaticResource BooleanToVisibilityConverter}}">
             <ScrollViewer>
                 <uc:TimeIntervalList Margin="0,10,0,10" />
             </ScrollViewer>
@@ -164,8 +213,28 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Command="{Binding AddIssueForProjectCommand}" Grid.Column="0" HorizontalAlignment="Center" Content="Dodaj zadanie"></Button>
-            <Button Command="{Binding DeleteIssueFromProjectCommand}" Grid.Column="1" HorizontalAlignment="Center" Content="Usuń zadanie"></Button>
+            <Button
+                Grid.Column="0"
+                MaxWidth="35"
+                MaxHeight="35"
+                HorizontalAlignment="Center"
+                BorderThickness="0"
+                Command="{Binding AddIssueForProjectCommand}"
+                Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+                ToolTip="Dodaj zadanie">
+                <Image Source="{StaticResource Add}" Stretch="Fill" />
+            </Button>
+            <Button
+                Grid.Column="1"
+                MaxWidth="35"
+                MaxHeight="35"
+                HorizontalAlignment="Center"
+                BorderThickness="0"
+                Command="{Binding DeleteIssueFromProjectCommand}"
+                Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+                ToolTip="Usuń zaznaczone zadanie">
+                <Image Source="{StaticResource Trash}" Stretch="Fill" />
+            </Button>
         </Grid>
     </Grid>
 </Window>
