--- a/Redmine.ManagerWPF/Views/UserControls/IssueSearchWindowForm.xaml
+++ b/Redmine.ManagerWPF/Views/UserControls/IssueSearchWindowForm.xaml
@@ -1,16 +1,24 @@
-﻿<UserControl x:Class="Redmine.ManagerWPF.Desktop.Views.UserControls.IssueSearchWindowForm"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-             xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
-             xmlns:conv="clr-namespace:Redmine.ManagerWPF.Desktop.Converters"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="Redmine.ManagerWPF.Desktop.Views.UserControls.IssueSearchWindowForm"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:Redmine.ManagerWPF.Desktop.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <UserControl.DataContext>
         <vm:IssueFormSearchWIndowViewModel x:Name="ViewModel" />
     </UserControl.DataContext>
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <BitmapImage x:Key="OpenBrowser" UriSource="/Resources/browser.png" />
+        </ResourceDictionary>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -33,18 +41,24 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0" Text="Nazwa:" Margin="5,10,10,0" />
-            <TextBox Grid.Row="1" Margin="5,0,10,0" Text="{Binding IssueFormModel.Name, Mode=TwoWay}" />
             <TextBlock
-            Grid.Row="0"
-            Grid.Column="1"
-            Margin="5,10,10,0"
-            Text="Status:" />
+                Grid.Row="0"
+                Margin="5,10,10,0"
+                Text="Nazwa:" />
             <TextBox
-            Grid.Row="1"
-            Grid.Column="1"
-            Margin="5,0,10,0"
-            Text="{Binding IssueFormModel.Status, Mode=TwoWay}" />
+                Grid.Row="1"
+                Margin="5,0,10,0"
+                Text="{Binding IssueFormModel.Name, Mode=TwoWay}" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="5,10,10,0"
+                Text="Status:" />
+            <TextBox
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="5,0,10,0"
+                Text="{Binding IssueFormModel.Status, Mode=TwoWay}" />
         </Grid>
 
         <TextBlock
@@ -57,25 +71,33 @@
             Grid.ColumnSpan="2"
             MaxHeight="250"
             Margin="5,0,10,0"
-            VerticalScrollBarVisibility="Auto"
             Text="{Binding IssueFormModel.Description, Mode=TwoWay}"
-            TextWrapping="Wrap" />
+            TextWrapping="Wrap"
+            VerticalScrollBarVisibility="Auto" />
         <TextBlock
             Grid.Row="3"
-            Margin="5,10,10,0"
             Grid.ColumnSpan="2"
+            Margin="5,10,10,0"
             Text="Link:" />
-        <Grid Grid.Row="4"
+        <Grid
+            Grid.Row="4"
             Grid.ColumnSpan="2"
             Margin="5,0,10,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBox
-                Text="{Binding IssueFormModel.Link, Mode=TwoWay}" />
-            <Button Command="{Binding OpenBrowserCommand}" VerticalAlignment="Center" Margin="10,0,10,0" Grid.Column="1">
-                <TextBlock Text="Otwórz link" TextWrapping="Wrap" />
+            <TextBox Text="{Binding IssueFormModel.Link, Mode=TwoWay}" />
+            <Button
+                Grid.Column="1"
+                MaxHeight="30"
+                Margin="10,0,10,0"
+                VerticalAlignment="Center"
+                BorderThickness="0"
+                Command="{Binding OpenBrowserCommand}"
+                Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+                ToolTip="Otwórz w przęglądarce">
+                <Image Source="{StaticResource OpenBrowser}" Stretch="Fill" />
             </Button>
         </Grid>
     </Grid>
