--- a/Redmine.ManagerWPF/Views/UserControls/ProjectShortInfo.xaml
+++ b/Redmine.ManagerWPF/Views/UserControls/ProjectShortInfo.xaml
@@ -1,28 +1,54 @@
-﻿<UserControl x:Class="Redmine.ManagerWPF.Desktop.Views.UserControls.ProjectShortInfo"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
-             xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="Redmine.ManagerWPF.Desktop.Views.UserControls.ProjectShortInfo"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <UserControl.DataContext>
         <vm:ProjectShortInfoViewModel />
     </UserControl.DataContext>
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <BitmapImage x:Key="OpenBrowser" UriSource="/Resources/browser.png" />
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <TextBlock Margin="10,0,0,0" FontWeight="Bold" Text="Link:"/>
-        <TextBox BorderThickness="0" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding SelectedProject.Link}" Margin="0,0,10,0"  Grid.Row="1" Grid.Column="0"/>
-        <Button Command="{Binding OpenBrowserCommand}" VerticalAlignment="Center" Margin="0,0,10,0" Grid.Column="1" Grid.RowSpan="2">
-            <TextBlock Text="Otwórz link" TextWrapping="Wrap" />
+        <TextBlock
+            Margin="10,0,0,0"
+            FontWeight="Bold"
+            Text="Link:" />
+        <TextBox
+            Grid.Row="1"
+            Grid.Column="0"
+            Margin="0,0,10,0"
+            BorderThickness="0"
+            IsReadOnly="True"
+            IsReadOnlyCaretVisible="True"
+            Text="{Binding SelectedProject.Link}" />
+        <Button
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            MaxHeight="30"
+            Margin="0,0,10,0"
+            VerticalAlignment="Center"
+            BorderThickness="0"
+            Command="{Binding OpenBrowserCommand}"
+            Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+            ToolTip="Otwórz w przęglądarce">
+            <Image Source="{StaticResource OpenBrowser}" Stretch="Fill" />
         </Button>
     </Grid>
 </UserControl>
