--- a/Redmine.ManagerWPF/Views/Windows/SearchWindow.xaml
+++ b/Redmine.ManagerWPF/Views/Windows/SearchWindow.xaml
@@ -1,18 +1,21 @@
-﻿<Window x:Class="Redmine.ManagerWPF.Desktop.Views.Windows.SearchWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-        xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.Windows"
-        xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-        xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
-        xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
-        xmlns:uc="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
-        xmlns:ui="http://schemas.modernwpf.com/2019"
-        mc:Ignorable="d"
-        Title="Wyszukaj" Height="600" Width="800">
+﻿<Window
+    x:Class="Redmine.ManagerWPF.Desktop.Views.Windows.SearchWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+    xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.Windows"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
+    xmlns:uc="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
+    xmlns:ui="http://schemas.modernwpf.com/2019"
+    xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    Title="Wyszukaj"
+    Width="800"
+    Height="600"
+    mc:Ignorable="d">
     <Window.DataContext>
         <vm:SearchWindowViewModel />
     </Window.DataContext>
@@ -32,36 +35,54 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid
-            Margin="0,10,0,0"
             Grid.Row="0"
-            Grid.Column="0">
+            Grid.Column="0"
+            Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" VerticalAlignment="Center" FontSize="20" Margin="10,0,0,10" Text="Projekt:" />
-            <TextBlock Grid.Column="1" VerticalAlignment="Center" FontSize="20" Margin="10,0,0,10" Text="{Binding Project.Name}" />
+            <TextBlock
+                Grid.Column="0"
+                Margin="10,0,0,10"
+                VerticalAlignment="Center"
+                FontSize="20"
+                Text="Projekt:" />
+            <TextBlock
+                Grid.Column="1"
+                Margin="10,0,0,10"
+                VerticalAlignment="Center"
+                FontSize="20"
+                Text="{Binding Project.Name}" />
         </Grid>
         <Grid
-            Margin="0,10,0,0"
             Grid.Row="1"
-            Grid.Column="0">
+            Grid.Column="0"
+            Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" VerticalAlignment="Center" FontSize="16" Margin="10,0,0,10" Text="Fraza:" />
-            <TextBox Grid.Column="1" Margin="10,0,10,0" Text="{Binding SearchText,UpdateSourceTrigger=PropertyChanged,Delay=1000}" />
+            <TextBlock
+                Grid.Column="0"
+                Margin="10,0,0,10"
+                VerticalAlignment="Center"
+                FontSize="16"
+                Text="Fraza:" />
+            <TextBox
+                Grid.Column="1"
+                Margin="10,0,10,0"
+                Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged, Delay=1000}" />
         </Grid>
 
         <TreeView
-            BorderBrush="Black"
-            BorderThickness="1"
             Grid.Row="2"
             Grid.Column="0"
             MinHeight="400"
             Margin="10"
             VerticalAlignment="Stretch"
+            BorderBrush="Black"
+            BorderThickness="1"
             ItemsSource="{Binding Issues}">
             <i:Interaction.Behaviors>
                 <customBehaviors:SearchWindowTreeViewBehavior />
@@ -74,15 +95,29 @@
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" Text="{Binding Name}" />
-                        <TextBlock Margin="20,0,0,0" FontWeight="Bold" Foreground="Green" Grid.Column="1" Text="Wykonane" Visibility="{Binding Done, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="20,0,0,0"
+                            FontWeight="Bold"
+                            Foreground="Green"
+                            Text="Wykonane"
+                            Visibility="{Binding Done, Converter={StaticResource BooleanToVisibilityConverter}}" />
                     </Grid>
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
-        <Grid Grid.Row="1" Grid.RowSpan="2" Grid.Column="1" Visibility="{Binding ViewIssueDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
+        <Grid
+            Grid.Row="1"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Visibility="{Binding ViewIssueDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
             <uc:IssueSearchWindowForm Margin="0,10,0,10" />
         </Grid>
-        <Grid Grid.Row="1" Grid.RowSpan="2" Grid.Column="1" Visibility="{Binding ViewCommentDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
+        <Grid
+            Grid.Row="1"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Visibility="{Binding ViewCommentDetails, Converter={StaticResource BooleanToVisibilityConverter}}">
             <uc:CommentSearchWindowForm Margin="0,10,0,10" />
         </Grid>
     </Grid>
