Add logger to application. Fix daily raport. Replace MessageBox by ModernWpf MessageBox. Force Light App theme. Add logs in any catch clause.

--- a/Redmine.ManagerWPF/Views/Windows/SearchWindow.xaml
+++ b/Redmine.ManagerWPF/Views/Windows/SearchWindow.xaml
@@ -15,6 +15,7 @@
     Title="Wyszukaj"
     Width="800"
     Height="600"
+    ui:WindowHelper.UseModernWindowStyle="True"
     mc:Ignorable="d">
     <Window.DataContext>
         <vm:SearchWindowViewModel />
