--- a/Redmine.ManagerWPF/Views/MainWindow.xaml
+++ b/Redmine.ManagerWPF/Views/MainWindow.xaml
@@ -2,7 +2,7 @@
     x:Class="Redmine.ManagerWPF.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
@@ -17,6 +17,7 @@
     Width="1000"
     MinWidth="800"
     MinHeight="650"
+    ui:WindowHelper.UseModernWindowStyle="True"
     Closing="Window_Closing"
     Icon="/logo.ico"
     StateChanged="MainWindowWindow_StateChanged"
@@ -30,7 +31,9 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <BitmapImage x:Key="Add" UriSource="/Resources/add.png" />
         <BitmapImage x:Key="Trash" UriSource="/Resources/bin.png" />
+
     </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -87,6 +90,8 @@
         </DockPanel>
         <tb:TaskbarIcon
             x:Name="TaskBarIcon"
+            Grid.Row="0"
+            Grid.Column="0"
             IconSource="/logo.ico"
             LeftClickCommand="{Binding ShowMainWindowCommand}"
             LeftClickCommandParameter="{Binding ElementName=MainWindowWindow}"
@@ -103,7 +108,7 @@
                 FontSize="24"
                 Text="Projekt:" />
             <ComboBox
-                x:Name="projectComboBox"
+                x:Name="ProjectComboBox"
                 Grid.Column="1"
                 Height="70"
                 MinWidth="200"
@@ -114,17 +119,17 @@
                 VerticalAlignment="Center"
                 ItemsSource="{Binding Projects}"
                 SelectedItem="{Binding SelectedProject, Mode=TwoWay}">
-                <Behaviors:Interaction.Triggers>
-                    <Behaviors:EventTrigger EventName="SelectionChanged" SourceObject="{Binding ElementName=projectComboBox}">
-                        <Behaviors:InvokeCommandAction Command="{Binding LoadIssuesForProjectAsyncCommand}" />
-                    </Behaviors:EventTrigger>
-                    <Behaviors:EventTrigger EventName="Loaded" SourceObject="{Binding ElementName=projectComboBox}">
-                        <Behaviors:InvokeCommandAction Command="{Binding LoadProjectsAsyncCommand}" />
-                    </Behaviors:EventTrigger>
-                    <Behaviors:EventTrigger EventName="DropDownOpened" SourceObject="{Binding ElementName=projectComboBox}">
-                        <Behaviors:InvokeCommandAction Command="{Binding LoadProjectsAsyncCommand}" />
-                    </Behaviors:EventTrigger>
-                </Behaviors:Interaction.Triggers>
+                <behaviors:Interaction.Triggers>
+                    <behaviors:EventTrigger EventName="SelectionChanged" SourceObject="{Binding ElementName=ProjectComboBox}">
+                        <behaviors:InvokeCommandAction Command="{Binding LoadIssuesForProjectAsyncCommand}" />
+                    </behaviors:EventTrigger>
+                    <behaviors:EventTrigger EventName="Loaded" SourceObject="{Binding ElementName=ProjectComboBox}">
+                        <behaviors:InvokeCommandAction Command="{Binding LoadProjectsAsyncCommand}" />
+                    </behaviors:EventTrigger>
+                    <behaviors:EventTrigger EventName="DropDownOpened" SourceObject="{Binding ElementName=ProjectComboBox}">
+                        <behaviors:InvokeCommandAction Command="{Binding LoadProjectsAsyncCommand}" />
+                    </behaviors:EventTrigger>
+                </behaviors:Interaction.Triggers>
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Margin="0,0,0,0" VerticalAlignment="Stretch">
@@ -155,9 +160,23 @@
             MinHeight="400"
             Margin="10"
             VerticalAlignment="Stretch"
-            BorderBrush="Black"
             BorderThickness="1"
             ItemsSource="{Binding Issues}">
+            <TreeView.ItemContainerStyle>
+                <Style BasedOn="{StaticResource {x:Type TreeViewItem}}" TargetType="{x:Type TreeViewItem}">
+                    <Setter Property="Tag" Value="{Binding DataContext, RelativeSource={RelativeSource AncestorType={x:Type TreeView}}}" />
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu>
+                                <MenuItem
+                                    Command="{Binding PlacementTarget.Tag.SynchronizeNodeCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                                    CommandParameter="{Binding}"
+                                    Header="Synchronizuj" />
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </TreeView.ItemContainerStyle>
             <i:Interaction.Behaviors>
                 <customBehaviors:MainWindowTreeViewBehavior />
             </i:Interaction.Behaviors>
@@ -207,7 +226,10 @@
                 <uc:TimeIntervalList Margin="0,10,0,10" />
             </ScrollViewer>
         </Grid>
-        <Grid Grid.Row="4" Margin="10,0,0,10">
+        <Grid
+            Grid.Row="4"
+            Grid.Column="0"
+            Margin="10,0,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
@@ -215,8 +237,8 @@
             </Grid.ColumnDefinitions>
             <Button
                 Grid.Column="0"
-                MaxWidth="35"
-                MaxHeight="35"
+                MaxWidth="30"
+                MaxHeight="30"
                 HorizontalAlignment="Center"
                 BorderThickness="0"
                 Command="{Binding AddIssueForProjectCommand}"
@@ -226,8 +248,8 @@
             </Button>
             <Button
                 Grid.Column="1"
-                MaxWidth="35"
-                MaxHeight="35"
+                MaxWidth="30"
+                MaxHeight="30"
                 HorizontalAlignment="Center"
                 BorderThickness="0"
                 Command="{Binding DeleteIssueFromProjectCommand}"
