--- a/Redmine.ManagerWPF/Views/MainWindow.xaml
+++ b/Redmine.ManagerWPF/Views/MainWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window
     x:Class="Redmine.ManagerWPF.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
-    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
-    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:tb="http://www.hardcodet.net/taskbar"
     xmlns:uc="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
@@ -30,6 +30,7 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <BitmapImage x:Key="Add" UriSource="/Resources/add.png" />
         <BitmapImage x:Key="Trash" UriSource="/Resources/bin.png" />
+        <BitmapImage x:Key="Actual" UriSource="/Resources/actual.png" />
     </Window.Resources>
 
     <Grid>
@@ -119,7 +120,7 @@
                 SelectedItem="{Binding SelectedProject, Mode=TwoWay}">
                 <behaviors:Interaction.Triggers>
                     <behaviors:EventTrigger EventName="SelectionChanged" SourceObject="{Binding ElementName=ProjectComboBox}">
-                        <behaviors:InvokeCommandAction Command="{Binding LoadIssuesForProjectAsyncCommand}" />
+                        <behaviors:InvokeCommandAction Command="{Binding LoadIssuesForProjectCommand}" />
                     </behaviors:EventTrigger>
                     <behaviors:EventTrigger EventName="Loaded" SourceObject="{Binding ElementName=ProjectComboBox}">
                         <behaviors:InvokeCommandAction Command="{Binding LoadProjectsAsyncCommand}" />
@@ -154,9 +155,10 @@
         <Grid
             Grid.Row="2"
             Grid.RowSpan="2"
-            Grid.Column="0" 
-            Visibility="{Binding ViewIssuesList, Converter={StaticResource BooleanToVisibilityConverter}}" VerticalAlignment="Stretch" >
-            <uc:MainWindowTreeView/>
+            Grid.Column="0"
+            VerticalAlignment="Stretch"
+            Visibility="{Binding ViewIssuesList, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <uc:MainWindowTreeView />
         </Grid>
         <Grid
             Grid.Row="1"
@@ -185,37 +187,8 @@
                 <uc:TimeIntervalList Margin="0,10,0,10" />
             </ScrollViewer>
         </Grid>
-        <Grid
-            Grid.Row="4"
-            Grid.Column="0"
-            Margin="10,0,0,10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Button
-                Grid.Column="0"
-                MaxWidth="30"
-                MaxHeight="30"
-                HorizontalAlignment="Center"
-                BorderThickness="0"
-                Command="{Binding AddIssueForProjectCommand}"
-                Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
-                ToolTip="Dodaj zadanie">
-                <Image Source="{StaticResource Add}" Stretch="Fill" />
-            </Button>
-            <Button
-                Grid.Column="1"
-                MaxWidth="30"
-                MaxHeight="30"
-                HorizontalAlignment="Center"
-                BorderThickness="0"
-                Command="{Binding DeleteIssueFromProjectCommand}"
-                Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
-                ToolTip="Usuń zaznaczone zadanie">
-                <Image Source="{StaticResource Trash}" Stretch="Fill" />
-            </Button>
+        <Grid Grid.Row="4">
+            <uc:ControlButtonsMainWindow />
         </Grid>
     </Grid>
 </Window>
