--- a/Redmine.ManagerWPF/Views/UserControls/IssueForm.xaml
+++ b/Redmine.ManagerWPF/Views/UserControls/IssueForm.xaml
@@ -28,7 +28,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="200" />
+            <RowDefinition Height="180" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
@@ -38,6 +38,8 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Row="0" Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
@@ -55,17 +57,28 @@
                 Margin="5,0,10,0"
                 Text="{Binding IssueFormModel.Name, Mode=TwoWay}" />
             <TextBlock
-                Grid.Row="0"
-                Grid.Column="1"
+                Grid.Row="2"
+                Grid.Column="0"
                 Margin="5,10,10,0"
                 Text="Status:" />
             <TextBox
-                Grid.Row="1"
-                Grid.Column="1"
+                Grid.Row="3"
+                Grid.Column="0"
                 Margin="5,0,10,0"
                 Text="{Binding IssueFormModel.Status, Mode=TwoWay}" />
+            <TextBlock
+                Grid.Row="2"
+                Grid.Column="1"
+                Margin="5,10,10,0"
+                Text="Numer:" />
+            <TextBox
+                Grid.Row="3"
+                Grid.Column="1"
+                Margin="5,0,10,0"
+                IsReadOnly="True"
+                Text="{Binding IssueFormModel.SourceId}" />
             <Button
-                Grid.Row="1"
+                Grid.Row="4"
                 Grid.Column="2"
                 MaxHeight="30"
                 Margin="0,0,10,0"
@@ -78,7 +91,7 @@
                 <Image Source="{StaticResource Done}" Stretch="Fill" />
             </Button>
             <Button
-                Grid.Row="1"
+                Grid.Row="4"
                 Grid.Column="2"
                 MaxHeight="30"
                 Margin="0,0,10,0"
@@ -100,7 +113,7 @@
         <TextBox
             Grid.Row="2"
             Grid.ColumnSpan="2"
-            MaxHeight="250"
+            MaxHeight="200"
             Margin="5,0,10,0"
             Text="{Binding IssueFormModel.Description, Mode=TwoWay}"
             TextWrapping="Wrap"
