--- a/Redmine.ManagerWPF/Views/UserControls/MainWindowTreeView.xaml
+++ b/Redmine.ManagerWPF/Views/UserControls/MainWindowTreeView.xaml
@@ -1,16 +1,18 @@
-﻿<UserControl x:Class="Redmine.ManagerWPF.Desktop.Views.UserControls.MainWindowTreeView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
-             xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
-             xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
-             xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="Redmine.ManagerWPF.Desktop.Views.UserControls.MainWindowTreeView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+    xmlns:local="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
+    xmlns:vm="clr-namespace:Redmine.ManagerWPF.Desktop.ViewModels"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
 
     <UserControl.DataContext>
         <vm:MainWindowTreeViewViewModel />
@@ -20,7 +22,16 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </UserControl.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <TextBox
+            Grid.Row="0"
+            Margin="10,10,10,0"
+            Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged, Delay=1000}" />
         <TreeView
+            Grid.Row="1"
             MinHeight="400"
             Margin="10"
             VerticalAlignment="Stretch"
